--- a/index.html.html
+++ b/index.html.html
@@ -51,7 +51,7 @@
       color: #3498db;
     }
     header {
-      padding: 6rem 1rem 3rem;
+      padding: 6rem 2rem 3rem;
       text-align: center;
       margin-top: 3rem;
     }
@@ -69,22 +69,25 @@
       margin-top: 1rem;
       text-align: left;
       max-width: 100%;
-      margin-left: 1rem;
-      margin-right: 1rem;
+      margin-left: 2rem;
+      margin-right: 2rem;
     }
     section {
-      padding: 3rem 1rem;
+      padding: 3rem 2rem;
       max-width: 100%;
-      margin: 0 1rem;
+      margin: 0 2rem;
       font-size: 1.5rem;
     }
     h2 {
       color: white;
       font-size: 2.5rem;
-      margin-bottom: 1rem;
+      margin-bottom: 0.5rem;
+    }
+    h2 + p, h2 + div p, h2 + form p {
+      font-size: 1rem; /* Smaller subtext under headers */
     }
     ul {
-      padding-left: 1.25rem;
+      padding-left: 1.5rem;
     }
     .contact-form {
       display: flex;
@@ -125,20 +128,20 @@
   </nav>
 
   <header>
-    <div style="text-align: left; max-width: 100%; margin: 0 1rem;">
+    <div style="text-align: left; max-width: 100%; margin: 0 2rem;">
       <p class="tagline"><span style='color: #3498db;'>Growing</span> Seed to Series B startups with exceptional talent</p>
-      <p style="font-size: 1.75rem; color: #aaa; margin-top: 0.5rem; text-align: left;">We help high-growth startups hire with velocity and build teams that scale</p>
+      <p style="font-size: 1.25rem; color: #aaa; margin-top: 0.5rem; text-align: left;">We help high-growth startups hire with velocity and build teams that scale</p>
       </div>
   </header>
 
   <section id="about">
     <h2>About <span style='color: #3498db;'>Us</span></h2>
-    <p>Founded with 20 years of collective experience building teams at startups, Grow Talent is the arm between high-growth startups and the best-fit talent on the market.</p>
-    <p>We understand what it takes to compete for talent, and we know how to shape unique go-to-market and hiring processes that enable businesses to win.</p>
+    <p style="font-size:1rem; color:#aaa;">Founded with 20 years of collective experience building teams at startups, Grow Talent is the arm between high-growth startups and the best-fit talent on the market.</p>
+    <p style="font-size:1rem; color:#aaa;">We understand what it takes to compete for talent, and we know how to shape unique go-to-market and hiring processes that enable businesses to win.</p>
   </section>
 <section id="job-titles" style="padding-top: 1rem; padding-bottom: 2rem;">
-    <h2 style="text-align: left; color: white; margin: 0 1rem 1rem 1rem; font-size: 2.5rem;">Who we <span style='color: #3498db;'>hire</span></h2>
-    <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap: 1.5rem; max-width: 100%; margin: 0 1rem; font-size: 1.5rem;">
+    <h2 style="text-align: left; color: white; margin: 0 2rem 1rem 2rem; font-size: 2.5rem;">Who we <span style='color: #3498db;'>hire</span></h2>
+    <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap: 1.5rem; max-width: 100%; margin: 0 2rem; font-size: 1.5rem;">
       <div style="background-color: #2a2a2a; padding: 2rem; border-radius: 8px; text-align: center; ">Backend Engineer</div>
       <div style="background-color: #2a2a2a; padding: 2rem; border-radius: 8px; text-align: center; ">Frontend Engineer</div>
       <div style="background-color: #2a2a2a; padding: 2rem; border-radius: 8px; text-align: center;">Full-stack Engineer</div>
@@ -147,19 +150,19 @@
       <div style="background-color: #2a2a2a; padding: 2rem; border-radius: 8px; text-align: center;">AI Engineer</div>
     </div>
 
-    <h2 style="text-align: left; color: white; margin: 3rem 1rem 1rem 1rem; font-size: 2.5rem;">How we <span style='color: #3498db;'>partner</span></h2>
-    <div style="display: flex; justify-content: space-between; gap: 1.5rem; margin-top: 1.5rem; max-width: 100%; margin-left: 1rem; margin-right: 1rem; font-size: 1.5rem;">
+    <h2 style="text-align: left; color: white; margin: 3rem 2rem 1rem 2rem; font-size: 2.5rem;">How we <span style='color: #3498db;'>partner</span></h2>
+    <div style="display: flex; justify-content: space-between; gap: 1.5rem; margin-top: 1.5rem; max-width: 100%; margin-left: 2rem; margin-right: 2rem; font-size: 1.5rem;">
   <div style="flex: 1; background-color: #2a2a2a; padding: 2.5rem; border-radius: 10px; text-align: center;">
   <strong>Contingency</strong>
-  <p style='margin-top: 1rem; font-size: 1.25rem; color: #ccc;'>Review and interview candidates with no commitment. Cost is only applicable after a hire is made.</p>
+  <p style='margin-top: 1rem; font-size: 1rem; color: #ccc;'>Review and interview candidates with no commitment. Cost is only applicable after a hire is made.</p>
 </div>
   <div style="flex: 1; background-color: #2a2a2a; padding: 2.5rem; border-radius: 10px; text-align: center;">
   <strong>Retainer</strong>
-  <p style='margin-top: 1rem; font-size: 1.25rem; color: #ccc;'>Pay an upfront fee to prioritize your hiring with a dedicated recruiter or two. Reduced fee upon hire.</p>
+  <p style='margin-top: 1rem; font-size: 1rem; color: #ccc;'>Pay an upfront fee to prioritize your hiring with a dedicated recruiter or two. Reduced fee upon hire.</p>
 </div>
   <div style="flex: 1; background-color: #2a2a2a; padding: 2.5rem; border-radius: 10px; text-align: center;">
   <strong>Embedded</strong>
-  <p style='margin-top: 1rem; font-size: 1.25rem; color: #ccc;'>Retain a recruiter that is fully plugged in to your talent acquisition process, focused on hiring and putting systems in place.</p>
+  <p style='margin-top: 1rem; font-size: 1rem; color: #ccc;'>Retain a recruiter that is fully plugged in to your talent acquisition process, focused on hiring and putting systems in place.</p>
 </div>
 </div>
       
